# weather-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3e15281cc01a_init.py  78fe1fce6203_init.py
backend/: main.py  tasks.py
backend/api/v1/weather/: schemas.py  utils.py  views.py
backend/config/: conf.py
backend/domains/: interface.py  repository.py  service.py
backend/models/: __init__.py  base.py  history.py
docker/: app.sh
frontend/: index.html
src/: main.py
src/alembic/versions/: 06722b85313c_init.py
src/backend/api/v1/: __init__.py
src/backend/api/v1/weather/: utils.py
src/backend/config/: conf.py  db_helper.py
src/docker/: run_migrations.sh
